Crashes when right-clicking on a path and selecting Open New Window
Affected version
GNOME nautilus 42.0
Steps to reproduce
Current behavior
The following output is printed to the console and nautilus crashes.
**
ERROR:../src/nautilus-window.c:579:nautilus_window_open_location_full: assertion failed: (!(flags & NAUTILUS_OPEN_FLAG_NEW_WINDOW))
Bail out! ERROR:../src/nautilus-window.c:579:nautilus_window_open_location_full: assertion failed: (!(flags & NAUTILUS_OPEN_FLAG_NEW_WINDOW))
fish: Job 1, 'nautilus' terminated by signal SIGABRT (Abort)
Expected behavior
A new window should open.
Additional information
OS: openSUSE Tumbleweed x86_64
Kernel: 5.16.15-1-default
DE: GNOME 42.0
CPU: AMD Ryzen 5 3600XT (12) @ 3.800GHz
GPU: AMD ATI Radeon RX 550 640SP / RX 560/560X
suser@localhost:~> echo $XDG_SESSION_TYPE
wayland
Edited by nexryai