window: Fix crash when opening new window from pathbar

Changes as part of commit 022867e3d3370560f2c6c07f90ad5fdfd7916d50
switched the handler of the pathbar signal.

The new handler raises an exception for NAUTILUS_OPEN_FLAG_NEW_WINDOW.

Use nautilus_application API should be used when handling new windows.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/2208