src/nautilus-window.c
@@ -1631,7 +1631,15 @@ on_path_bar_open_location (NautilusWindow    *window,
                            GFile             *location,
                            NautilusOpenFlags  open_flags)
 {
-    nautilus_window_open_location_full (window, location, open_flags, NULL, NULL);
+    if (open_flags & NAUTILUS_OPEN_FLAG_NEW_WINDOW)
+    {
+        nautilus_application_open_location_full (NAUTILUS_APPLICATION (g_application_get_default ()),
+                                                 location, NAUTILUS_OPEN_FLAG_NEW_WINDOW, NULL, NULL, NULL);
+    }
+    else
+    {
+        nautilus_window_open_location_full (window, location, open_flags, NULL, NULL);
+    }
 }
 
 static void
